--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/sdk": "^4.0.99",
     "dotenv": "^16.4.5",
     "next": "15.0.3",
+    "pino-pretty": "^13.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "thirdweb": "^5.71.0"
