--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "thirdweb": "^5.71.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.16",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
